--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
   </section>
 
   <section class="section" id="quiz">
-    <h3>🦁 Daily Word Challenge</h3>
+    <h3>Daily Word Challenge</h3>
     <p style="margin-bottom: 1.5rem;">Test your 11+ skills! Can you pick the correct answer?</p>
     
     <div class="quiz-container">
@@ -358,7 +358,7 @@
   </section>
 
   <section class="section" id="youtube-section">
-    <h3>📺 Watch & Learn with WordScout!</h3>
+    <h3>Watch & Learn with WordScout!</h3>
     <div class="youtube-layout">
         <div class="youtube-text">
             <p>Learning is even better when you can see it in action! Check out our <strong>WordScout YouTube channel</strong> for fun lessons, spelling challenges, and top tips for the 11+ exam.</p>
